--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<html ng-app="app">
+<html ng-app="app" lang="en" dir="ltr">
   <head>
     <!-- Angular Scrips -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <!-- Angular's Router Library for SPA -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-route.js"></script>
-
-    <!-- Bootstrap -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Okta App Auth SDK -->
     <script src="OktaAuth.min.js" type="text/javascript"></script>
@@ -16,10 +12,16 @@
     <script src="app.js" type="text/javascript"> </script>
     <script src="okta-angular.js" type="text/javascript"></script>
     <script src="api_calls.js" type="text/javascript"></script>
-    <!-- Viewport settings-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <title>AcmeHealth</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+     <link rel="stylesheet" type="text/css" media="all" href="./css/master.css">
   </head>
-  <body>
+  <body class={{layout}}>
     <div ng-view>   </div>
   </body>
     
