Added config file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="app.js" type="text/javascript"> </script>
     <script src="okta-angular.js" type="text/javascript"></script>
     <script src="api_calls.js" type="text/javascript"></script>
+    <script src="oktaconfig.js" type="text/javascript"></script>
 
     <title>AcmeHealth</title>
     <meta charset="utf-8">
